# pyhephaestus

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/: as_class.py  as_decorator.py  simple.py
pyhephaestus/: __init__.py  bytecode_tree.py  bytecode_wrapper.py  byteplay.py  code_utils.py  constants.py  declaration.py  experemental.py  instruction.py  instrumentation.py  loader.py  log.py  merger.py  utils.py  visitors.py
pyhephaestus/constants/: __init__.py  co_flags_mask.py  instruction.py  utils.py
pyhephaestus/inject/: __init__.py  code.py  instruction.py
