[tool.poetry]
name = "pyhephaestus"
version = "0.1.0"
description = ""
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pylint = "^2.15.2"
mypy = "^0.971"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
